[gd_scene load_steps=1 format=3 uid="uid://c1gfwbo4e4te5"]

[ext_resource type="Script" path="res://scripts/work_panel.gd" id="1_j3n8e"]

[node name="WorkPanel" type="Panel"]
layout_mode = 3
anchors_preset = 0
custom_minimum_size = Vector2(900, 520)
script = ExtResource("1_j3n8e")

[node name="TopBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.0
offset_bottom = 40.0
color = Color(0.08, 0.09, 0.11, 1)

[node name="TitleLabel" type="Label" parent="./TopBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 300.0
offset_bottom = 32.0
text = "Labor Terminal"

[node name="MinBtn" type="Button" parent="./TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_right = -34.0
offset_top = 4.0
offset_bottom = 32.0
text = "_"

[node name="MaxBtn" type="Button" parent="./TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.0
offset_right = -16.0
offset_top = 4.0
offset_bottom = 32.0
text = "⬜"

[node name="CloseBtn" type="Button" parent="./TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.0
offset_right = -2.0
offset_top = 4.0
offset_bottom = 32.0
text = "X"

[node name="Body" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Interior" type="VBoxContainer" parent="./Body"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TopStrip" type="Panel" parent="./Body/Interior"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="StripContent" type="HBoxContainer" parent="./Body/Interior/TopStrip"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 12.0
offset_right = -24.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="DesignationLabel" type="Label" parent="./Body/Interior/TopStrip/StripContent"]
unique_name_in_owner = true
layout_mode = 2
text = "Worker: 3X-991"

[node name="TopDivider" type="VSeparator" parent="./Body/Interior/TopStrip/StripContent"]
layout_mode = 2

[node name="QuotaLabel" type="Label" parent="./Body/Interior/TopStrip/StripContent"]
unique_name_in_owner = true
layout_mode = 2
text = "Labor quota: 00%"

[node name="QuotaProgress" type="ProgressBar" parent="./Body/Interior/TopStrip/StripContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 120.0
value = 0.0

[node name="AuditTicker" type="Label" parent="./Body/Interior/TopStrip/StripContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Audit bulletin: awaiting compliance ping..."

[node name="ContentArea" type="HBoxContainer" parent="./Body/Interior"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 18

[node name="LeftRail" type="VBoxContainer" parent="./Body/Interior/ContentArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(68, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="RailSpine" type="ColorRect" parent="./Body/Interior/ContentArea/LeftRail"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2
size_flags_vertical = 3
color = Color(0.31, 0.36, 0.38, 1)

[node name="RailNodes" type="VBoxContainer" parent="./Body/Interior/ContentArea/LeftRail"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RailNode0" type="ColorRect" parent="./Body/Interior/ContentArea/LeftRail/RailNodes"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.11, 0.12, 0.13, 1)

[node name="RailNode1" type="ColorRect" parent="./Body/Interior/ContentArea/LeftRail/RailNodes"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.11, 0.12, 0.13, 1)

[node name="RailNode2" type="ColorRect" parent="./Body/Interior/ContentArea/LeftRail/RailNodes"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.11, 0.12, 0.13, 1)

[node name="RailNode3" type="ColorRect" parent="./Body/Interior/ContentArea/LeftRail/RailNodes"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.11, 0.12, 0.13, 1)

[node name="RailNode4" type="ColorRect" parent="./Body/Interior/ContentArea/LeftRail/RailNodes"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.11, 0.12, 0.13, 1)

[node name="RailNode5" type="ColorRect" parent="./Body/Interior/ContentArea/LeftRail/RailNodes"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.11, 0.12, 0.13, 1)

[node name="CentralCore" type="VBoxContainer" parent="./Body/Interior/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="CoreHeader" type="Label" parent="./Body/Interior/ContentArea/CentralCore"]
layout_mode = 2
text = "Scan aperture 04 | File intercept"

[node name="QuestionFrame" type="Panel" parent="./Body/Interior/ContentArea/CentralCore"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="QuestionStack" type="VBoxContainer" parent="./Body/Interior/ContentArea/CentralCore/QuestionFrame"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 14.0
offset_right = -18.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="QuestionIdLabel" type="Label" parent="./Body/Interior/ContentArea/CentralCore/QuestionFrame/QuestionStack"]
unique_name_in_owner = true
layout_mode = 2
text = "FILE REF :: 77-AX9"

[node name="QuestionFeed" type="RichTextLabel" parent="./Body/Interior/ContentArea/CentralCore/QuestionFrame/QuestionStack"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Awaiting prompt pull from archive lattice..."

[node name="GlitchOverlay" type="Label" parent="./Body/Interior/ContentArea/CentralCore/QuestionFrame/QuestionStack"]
unique_name_in_owner = true
layout_mode = 2
text = "// surveillance buffer static"

[node name="ScanLines" type="ColorRect" parent="./Body/Interior/ContentArea/CentralCore/QuestionFrame/QuestionStack"]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 1, 1, 0.05)

[node name="AnswerStack" type="VBoxContainer" parent="./Body/Interior/ContentArea/CentralCore"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="AnswerLabel" type="Label" parent="./Body/Interior/ContentArea/CentralCore/AnswerStack"]
layout_mode = 2
text = "Ingress port"

[node name="AnswerField" type="LineEdit" parent="./Body/Interior/ContentArea/CentralCore/AnswerStack"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Transmit response payload..."

[node name="SubmitButton" type="Button" parent="./Body/Interior/ContentArea/CentralCore/AnswerStack"]
unique_name_in_owner = true
layout_mode = 2
text = "Submit to central"

[node name="RightColumn" type="VBoxContainer" parent="./Body/Interior/ContentArea"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusHeader" type="Label" parent="./Body/Interior/ContentArea/RightColumn"]
layout_mode = 2
text = "Output processing"

[node name="StatusList" type="VBoxContainer" parent="./Body/Interior/ContentArea/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="StatusLine0" type="HBoxContainer" parent="./Body/Interior/ContentArea/RightColumn/StatusList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Indicator" type="ColorRect" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine0"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
color = Color(0.15, 0.16, 0.18, 1)

[node name="Label" type="Label" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine0"]
layout_mode = 2
text = "Input received"

[node name="StatusLine1" type="HBoxContainer" parent="./Body/Interior/ContentArea/RightColumn/StatusList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Indicator" type="ColorRect" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine1"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
color = Color(0.15, 0.16, 0.18, 1)

[node name="Label" type="Label" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine1"]
layout_mode = 2
text = "Data extraction"

[node name="StatusLine2" type="HBoxContainer" parent="./Body/Interior/ContentArea/RightColumn/StatusList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Indicator" type="ColorRect" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine2"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
color = Color(0.15, 0.16, 0.18, 1)

[node name="Label" type="Label" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine2"]
layout_mode = 2
text = "Verification"

[node name="StatusLine3" type="HBoxContainer" parent="./Body/Interior/ContentArea/RightColumn/StatusList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Indicator" type="ColorRect" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine3"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
color = Color(0.15, 0.16, 0.18, 1)

[node name="Label" type="Label" parent="./Body/Interior/ContentArea/RightColumn/StatusList/StatusLine3"]
layout_mode = 2
text = "Judgement"

[node name="StatusNote" type="Label" parent="./Body/Interior/ContentArea/RightColumn"]
layout_mode = 2
text = "Ancient clerical core monitoring..."

[node name="BottomStrip" type="Panel" parent="./Body/Interior"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2

[node name="TicketContent" type="MarginContainer" parent="./Body/Interior/BottomStrip"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 12.0
offset_right = -18.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="TicketStack" type="VBoxContainer" parent="./Body/Interior/BottomStrip/TicketContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TicketLabel" type="Label" parent="./Body/Interior/BottomStrip/TicketContent/TicketStack"]
layout_mode = 2
text = "Dispensed asset (if any):"

[node name="TicketCompartment" type="Control" parent="./Body/Interior/BottomStrip/TicketContent/TicketStack"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="CompartmentBg" type="ColorRect" parent="./Body/Interior/BottomStrip/TicketContent/TicketStack/TicketCompartment"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07, 0.07, 0.08, 1)

[node name="DoorLeft" type="ColorRect" parent="./Body/Interior/BottomStrip/TicketContent/TicketStack/TicketCompartment"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 0.5
offset_bottom = 52.0
color = Color(0.11, 0.13, 0.15, 1)

[node name="DoorRight" type="ColorRect" parent="./Body/Interior/BottomStrip/TicketContent/TicketStack/TicketCompartment"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_right = 1.0
offset_bottom = 52.0
color = Color(0.11, 0.13, 0.15, 1)

[node name="TicketIcon" type="Label" parent="./Body/Interior/BottomStrip/TicketContent/TicketStack/TicketCompartment"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 36.0
text = "⛃"

[node name="TicketRewardLabel" type="Label" parent="./Body/Interior/BottomStrip/TicketContent/TicketStack/TicketCompartment"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
text = "Awaiting clearance..."

[node name="RailTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.4
autostart = true

[node name="GlitchTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8
autostart = true

[node name="AlertTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.5
autostart = true
